--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "child_process": "^1.0.2",
     "commander": "^2.20.0",
     "copy-dir": "^1.1.0",
+    "download": "^7.1.0",
     "fstream": "^1.0.12",
     "ignore": "^5.1.2",
     "inquirer": "^6.3.1",
